plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.epam.reportportal'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    implementation 'com.nimbusds:nimbus-jose-jwt:9.40'
    implementation 'com.google.crypto.tink:tink:1.15.0'
    implementation 'com.google.cloud:google-cloud-storage:2.43.1'
    implementation 'com.google.cloud:google-cloud-compute:1.58.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'commons-codec:commons-codec:1.17.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('genAdminHash', JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.epam.reportportal.marketplace.tools.BcryptGen'
}
